# DelphiVCL4Python

./: .buildinfo  .devdata.env  .gitignore  LICENSE.md  MANIFEST.in  README.md  build.py  changelog.html  contributing.html  examples.html  faq.html  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  quickstart.html  reference.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  tutorials_guides.html
.doctrees/: changelog.doctree  contributing.doctree  environment.pickle  examples.doctree  faq.doctree  index.doctree  installation.doctree  quickstart.doctree  reference.doctree  tutorials_guides.doctree
_modules/: index.html
_sources/: contributing.rst.txt  faq.md.txt  installation.rst.txt  quickstart.rst.txt
changelog/: 0.1.40-changelog.html  1.0.0-changelog.html  1.0.1-changelog.html  1.0.2-changelog.html  1.0.3-changelog.html
delphivcl/: __init__.py  _utils.py  delphivclhack.py  moduledefs.py
docs/: HelloWorld-quickstart_2.md  Simplest-quickstart.md  ToDo-QuickStart.md  readme.md  requirements.txt
experts/: FormEditor.pas  VCL.FormEditor.pas  dclDelphiVCLExperts.dpk  dclDelphiVCLExperts.dproj
images/: readme.md
reference/: delphivcl.Action.html  delphivcl.ActionList.html  delphivcl.ActivityIndicator.html  delphivcl.BaseBindScopeComponent.html  delphivcl.BaseLinkingBindSource.html  delphivcl.BaseObjectBindSource.html  delphivcl.BasicAction.html  delphivcl.BasicBindComponent.html  delphivcl.BindComponentDelegate.html  delphivcl.BindingsList.html  delphivcl.BitBtn.html  delphivcl.Bitmap.html  delphivcl.BoundLabel.html  delphivcl.BufferedFileStream.html  delphivcl.Button.html  delphivcl.BytesStream.html  delphivcl.Canvas.html  delphivcl.CheckBox.html  delphivcl.Collection.html  delphivcl.ColorBox.html  delphivcl.ComboBox.html  delphivcl.Component.html  delphivcl.ContainedAction.html  delphivcl.ContainedActionList.html  delphivcl.ContainedBindComponent.html  delphivcl.Control.html  delphivcl.ControlBar.html  delphivcl.CustomAction.html  delphivcl.CustomActionList.html  delphivcl.CustomActivityIndicator.html  delphivcl.CustomBindingsList.html  delphivcl.CustomControl.html  delphivcl.CustomDrawGrid.html  delphivcl.CustomEdit.html  delphivcl.CustomForm.html  delphivcl.CustomGrid.html  delphivcl.CustomLinkControlToField.html  delphivcl.CustomLinkListControlToField.html  delphivcl.CustomLinkPropertyToField.html  delphivcl.CustomMemo.html  (+67 more)
reference_index/: delphivcl_classes.html
samples/: activityindicator.py
tests/: ___init__.py  __main__.py  test_import.py  test_install.py
tutorials/: HelloWorld-quickstart_2.md  Simplest-quickstart_1.md
(+387 files in other folders)
