[build-system]
requires = ["setuptools>=40.9.0", "wheel"]

[tool.cibuildwheel]
build = ["cp36-win*", "cp37-win*", "cp38-win*", "cp39-win*", "cp310-win*"]
skip = "pp*"
#archs = ["auto"]
#repair-wheel-command = ""

[tool.cibuildwheel.windows]
archs = ["x86", "AMD64"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poetry]
name = "delphivcl"
version = "0.1.18"
description = ""
authors = ["Jim McKeth", "Lucas Belo<lucas.belo@live.com>", "Lucio Montero<lucioric2000@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6<=3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
