[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[bdist_wheel]
universal = 0

[build_sphinx]
source-dir = docs/source
build-dir = _build
all-files = True

[metadata]
name = delphivcl
version = 1.0.5
description = Delphi VCL for Python
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/Embarcadero/DelphiVCL4Python
author = Lucas Belo, Jim McKeeth
author_email = lucas.belo@live.com
license = BSD
license_files = ['LICENSE.md']
classifiers =
    Intended Audience :: Developers
    Topic :: Software Development
    License :: Other/Proprietary License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7    
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Operating System :: Microsoft :: Windows    
project_urls = 
    Documentation = https://embarcadero.github.io/DelphiVCL4Python
    Source = https://github.com/Embarcadero/DelphiVCL4Python
    Tracker = https://github.com/Embarcadero/DelphiVCL4Python/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
python_requires = >=3
setup_requires =
    setuptools_scm
cmdclass =
    bdist_wheel = build.BDistWheel

[options.package_data]
* = *.pyd, *.pyi, *.xml